--- a/home.html
+++ b/home.html
@@ -301,20 +301,19 @@
             padding: 0;
             margin: 8px 0;
         }
-
         .assessment-description li {
-            padding-left: 18px;
-            margin-bottom: 4px;
-            position: relative;
+            display: flex;
+            align-items: center;
+            margin-bottom: 2px;
+            padding-left: 0;
         }
-
-        .assessment-description li::before {
-            content: '✓';
-            position: absolute;
-            left: 0;
+        .assessment-checkmark {
             color: #00a86b;
             font-weight: bold;
-            font-size: 18px;
+            font-size: 16px;
+            margin-right: 8px;
+            flex-shrink: 0;
+            line-height: 1;
         }
 
         .start-button {
@@ -346,29 +345,51 @@
             fill: white;
         }
 
-        @media (max-width: 768px) {
+        @media (max-width: 900px) {
             .landing-container {
-                padding: 12px 4px;
+                padding: 8px 2px;
                 max-width: 98vw;
             }
             .landing-title {
-                font-size: 16px;
+                font-size: 14px;
+                margin-bottom: 6px;
             }
             .landing-subtitle {
-                font-size: 11px;
+                font-size: 10px;
+                margin-bottom: 8px;
+            }
+            .landing-icon {
+                width: 40px;
+                height: 40px;
+                margin-bottom: 8px;
             }
             .assessment-info {
-                padding: 6px;
+                padding: 4px;
+                margin-bottom: 6px;
+            }
+            .info-grid {
+                gap: 4px;
+                margin-bottom: 4px;
             }
             .assessment-description {
-                font-size: 11px;
+                font-size: 9px;
+                line-height: 1.2;
             }
             .assessment-description h3 {
-                font-size: 12px;
+                font-size: 10px;
+                margin-bottom: 3px;
+            }
+            .assessment-description ul {
+                margin: 4px 0;
+            }
+            .assessment-description li {
+                margin-bottom: 2px;
+                padding-left: 12px;
             }
             .start-button {
-                padding: 8px 16px;
-                font-size: 13px;
+                padding: 6px 10px;
+                font-size: 11px;
+                margin-top: 8px;
             }
         }
 
@@ -855,11 +876,11 @@
                 <div class="assessment-description">
                     <h3>What You'll Be Assessed On:</h3>
                     <ul>
-                        <li>AI General Knowledge - Understanding core AI concepts</li>
-                        <li>AI Use Cases and Applications - Real-world AI implementations</li>
-                        <li>AI Governance and Ethics - Ethical principles and frameworks</li>
-                        <li>AI Impact on Workforce - Transformation and adaptation</li>
-                        <li>Risk Tolerance and Potential Outlook - Strategic perspectives</li>
+                        <li><span class="assessment-checkmark">✓</span>AI General Knowledge - Understanding core AI concepts</li>
+                        <li><span class="assessment-checkmark">✓</span>AI Use Cases and Applications - Real-world AI implementations</li>
+                        <li><span class="assessment-checkmark">✓</span>AI Governance and Ethics - Ethical principles and frameworks</li>
+                        <li><span class="assessment-checkmark">✓</span>AI Impact on Workforce - Transformation and adaptation</li>
+                        <li><span class="assessment-checkmark">✓</span>Risk Tolerance and Potential Outlook - Strategic perspectives</li>
                     </ul>
                     <p style="margin-top: 15px; font-style: italic; color: #6c757d; font-size: 13px;">
                         This assessment is designed for C-level Executives and Legislators to evaluate their AI readiness and identify areas for development.
