--- a/home.html
+++ b/home.html
@@ -1033,6 +1033,15 @@
             },
             {
                 category: "AI Governance and Ethics",
+                question: "Are you aware of any AI governance frameworks your organization uses (e.g., SDAIA Ethics Principles, ISO 42001)?",
+                options: [
+                    "Yes",
+                    "No"
+                ],
+                correct: 1
+            },
+            {
+                category: "AI Governance and Ethics",
                 question: "Transparency in AI primarily means:",
                 options: [
                     "Clear explanation of AI decision processes",
@@ -1066,6 +1075,19 @@
                     "I don't know"
                 ],
                 correct: 1
+            },
+            {
+                category: "AI Governance and Ethics",
+                question: "Which governance areas are you most concerned with?",
+                options: [
+                    "Bias & fairness",
+                    "Privacy & security",
+                    "Transparency & explainability",
+                    "Accountability",
+                    "Sustainability",
+                    "All of the above"
+                ],
+                correct: 6
             },
             {
                 category: "AI Impact on Workforce",
@@ -1162,6 +1184,18 @@
                     "Unsure"
                 ],
                 correct: 0
+            },
+            {
+                category: "Risk Tolerance and Potential Outlook",
+                question: "What is your leadership mindset around AI adoption?",
+                options: [
+                    "Cautious and exploratory",
+                    "Balanced between innovation and risk",
+                    "Aggressively investing in AI",
+                    "Skeptical or unconvinced",
+                    "Unsure"
+                ],
+                correct: 2
             }
         ];
 
